@@ -54,7 +54,7 @@ public:
     {
         Status_Checked,
         Status_Unchecked,
-        Status_Unknown,
+        Status_3rdState,
         Status_Max
     };
 
@@ -102,8 +102,11 @@ public:
     virtual bool IsPressed() const { return m_isPressed; }
 
     virtual bool HasTransparentBackground() { return true; }
-    
+
 protected:
+    virtual void DoSet3StateValue(wxCheckBoxState WXUNUSED(state));
+    virtual wxCheckBoxState DoGet3StateValue() const;
+
     virtual bool PerformAction(const wxControlAction& action,
                                long numArg = -1,
                                const wxString& strArg = wxEmptyString);
